deployments/deployment-timestamp-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timestamp-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: timestamp-app
  template:
    metadata:
      labels:
        app: timestamp-app
    spec:
      containers:
      - image: strm/helloworld-http
        name: timestamp-app
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: timestamp-app
  labels:
    app: timestamp-app
spec:
  selector:
    app: timestamp-app
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
